<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_close_white_24dp"
        android:title="@string/close"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>